manifests/platform/gateway.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: gateway 
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  addresses:
  - type: NamedAddress
    value: "gateway-1-ext-addr"
  listeners:
  - name: http
    protocol: HTTP
    port: 80
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: mc-fe-tls
          kind: Secret
